[build-system]
requires = ["setuptools", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "luscioustwitch"
version = "0.4.0"
authors = [
  { name="luscious.dev", email="admin@luscious.dev" },
]
description = "Twitch API Wrapper"
readme = "README.md"
license-file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/charlie-coleman/luscioustwitch"
"Bug Tracker" = "https://github.com/charlie-coleman/luscioustwitch/issues"